<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hubbler</string>
    <string name="powered_by_appmomos">Powered By Appmomos</string>
    <string name="logInSectionTitle">Log In Section</string>
    <string name="email">Email*</string>
    <string name="password">Password*</string>
    <string name="log_in">Log In</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password..?</string>
    <string name="noInternetTxt">No Internet Connection to proceed</string>
    <string name="mandatoryTxt">Mandatory</string>
    <string name="invalidEmailFormatTxt">Invalid email format</string>
    <string name="emailFormat" tools:ignore="TypographyDashes">[a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+</string>
    <string name="logInSuccessTxt">Successfully Logged In</string>
    <string name="logInFailedTxt">Invalid Credentials</string>
    <string name="submit">Submit</string>
    <string name="enterOtpTxt">Enter received OTP*</string>
    <string name="emailNotRegisteredTxt">Email Not Registered, Try with correct email</string>
    <string name="otpSentTxt">Otp has been sent to your registered phone number, Please enter correct OTP to proceed</string>
    <string name="otpLengthErrorTxt">Minimum length should be 6</string>
    <string name="incorrectOtpTxt">Incorrect OTP</string>
    <string name="passwordSentTxt">New password has been sent to your Mobile number</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logoutTxt">Log Out</string>


    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="english">English</string>
    <string name="kannada">ಕನ್ನಡ</string>
    <string name="app_language">App Language</string>
    <string name="home_screen">Home screen</string>

</resources>
