<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:focusable="false"
    android:focusableInTouchMode="true"
    android:padding="@dimen/dimen_10dp"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/title"
        android:text="@string/forgot_password"
        android:gravity="center_horizontal"
        android:textSize="@dimen/dimen_20sp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/firstHalf"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fpEmailEt"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/fpSubmitEmailBtn"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16sp"
            android:foreground="@drawable/ripple_effect"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="SpUsage" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/secondHalf"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutotp"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/fpOtpEt"
            android:inputType="number"
            android:maxLength="6"
            android:hint="@string/enterOtpTxt"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/fpSubmitOTPBtn"
        android:text="@string/submit"
        android:visibility="visible"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_16sp"
        android:foreground="@drawable/ripple_effect"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="SpUsage" />

    </LinearLayout>


</LinearLayout>